--- a/values.yaml
+++ b/values.yaml
@@ -46,7 +46,7 @@ global:
 injector:
   # True if you want to enable vault agent injection.
   # @default: global.enabled
-  enabled: true
+  enabled: false
 
   replicas: 1
 
@@ -1042,7 +1042,7 @@ ui:
   publishNotReadyAddresses: true
   # The service should only contain selectors for active Vault pod
   activeVaultPodOnly: false
-  serviceType: "ClusterIP"
+  serviceType: "NodePort"
   serviceNodePort: null
   externalPort: 8200
   targetPort: 8200
@@ -1089,7 +1089,7 @@ csi:
   # With the driver and provider installed, you can mount Vault secrets into volumes
   # similar to the Vault Agent injector, and you can also sync those secrets into
   # Kubernetes secrets.
-  enabled: false
+  enabled: True
 
   image:
     repository: "hashicorp/vault-csi-provider"
