--- a/values.yaml
+++ b/values.yaml
@@ -1107,12 +1107,21 @@ csi:
   # volumeMounts is a list of volumeMounts for the main server container. These are rendered
   # via toYaml rather than pre-processed like the extraVolumes value.
   # The purpose is to make it easy to share volumes between containers.
-  volumeMounts: null
+  volumeMounts: 
+    - name: secrets-store-inline
+      mountPath: "/mnt/secrets-store"
+      readOnly: true
   # - name: tls
   #   mountPath: "/vault/tls"
   #   readOnly: true
 
-  resources: {}
+  resources: 
+      requests:
+        cpu: 50m
+        memory: 128Mi
+      limits:
+        cpu: 50m
+        memory: 128Mi
   # resources:
   #   requests:
   #     cpu: 50m
