--- a/values.yaml
+++ b/values.yaml
@@ -1107,10 +1107,7 @@ csi:
   # volumeMounts is a list of volumeMounts for the main server container. These are rendered
   # via toYaml rather than pre-processed like the extraVolumes value.
   # The purpose is to make it easy to share volumes between containers.
-  volumeMounts: 
-    - name: secrets-store-inline
-      mountPath: "/mnt/secrets-store"
-      readOnly: true
+  volumeMounts: null
   # - name: tls
   #   mountPath: "/vault/tls"
   #   readOnly: true
